# infotaxis

./: .gitignore  CMakeLists.txt  COPYING.txt  README.md  src
scripts/: batchtest.py  makegif.sh  plotentropy.gp  plotpath.gp
src/: infotaxis.cpp  infotaxis.hpp  main.cpp
